fix: list component spacing and align

--- a/src/app/components/collapser/collapser.component.less
+++ b/src/app/components/collapser/collapser.component.less
@@ -1,9 +1,8 @@
-@import "/src/theme/importDep.less";
+@import '/src/theme/importDep.less';
 
 UL {
   color: @blue-dark;
   border: none;
-  margin: 5px 18px 30px;
 
   LI {
     border-bottom-color: @grey;
@@ -11,7 +10,7 @@ UL {
     BUTTON {
       color: @blue-grey;
       padding-left: 0;
-  
+
       I {
         color: @blue;
         &::before {
