--- a/src/theme/variables.less
+++ b/src/theme/variables.less
@@ -7,7 +7,7 @@
 @grey: #e5e5e5;
 @dark-gray: #5c5c5c;
 @white: #fff;
-@saumon: #FF9A9A;
+@saumon: #ff9a9a;
 
 @bg-error: #fef4f5;
 @error: #dc3545;
@@ -16,4 +16,4 @@
 @success: #24883e;
 @bg-success: #f3f9f5;
 
-@box-radius: 20px;
+@box-radius: 25px;
